# Django

./: .coveragerc  .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .replit  README.md  blog.json  categories_and_products_fixture.json  manage.py  marketplace.json  mypy.ini  pyproject.toml  replit.md  requirements.txt  students_fixture.json  users.json
!Old/blog/: views.py
!Old/blog`/: admin.py  models.py
!Old/marketplace/: apps.py
!Old/marketplace+/: forms.py  models.py  urls.py
!Old/marketplace_/: urls.py  views.py
!Old/marketplace`/: apps.py  signals.py
FromProject04/Project04-feature-project04_prepare_017/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .replit  .temporary_files.md  COMMANDS.md  DEVELOPMENT.md  POSTGRES_REPLIT_SETUP.md  design_guidelines.md  manage.py  project04.json  pyproject.toml  replit.md  start_server.sh
FromProject04/Project04-feature-project04_prepare_017/apps/core/: middleware.py  mixins.py  models.py  permissions.py  services.py
FromProject04/Project04-feature-project04_prepare_017/apps/mailings/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  signals.py  urls.py  views.py
FromProject04/Project04-feature-project04_prepare_017/apps/mailings/management/commands/: send_mailing.py
FromProject04/Project04-feature-project04_prepare_017/apps/mailings/migrations/: 0001_initial.py  0002_initial.py  0003_attempt_recipient.py  0004_alter_message_options_alter_recipient_options.py  0005_add_can_view_all_mailings_permission.py  0006_add_trigger_type_to_attempt.py  0007_mailing_successfully_sent.py  0008_add_run_tracking.py
FromProject04/Project04-feature-project04_prepare_017/apps/users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
FromProject04/Project04-feature-project04_prepare_017/apps/users/management/commands/: create_managers_group.py
FromProject04/Project04-feature-project04_prepare_017/apps/users/migrations/: 0001_initial.py  0002_user_is_email_verified_user_token_created_at_and_more.py  0003_alter_user_verification_token.py  0004_mark_existing_users_as_verified.py
FromProject04/Project04-feature-project04_prepare_017/attached_assets/: For_Start_1759591503128.txt  Pasted--1-1--1759691370560_1759691370561.txt  Pasted--Dj-1759685885546_1759685885547.txt  Pasted--GitHub-gi-1759685681312_1759685681313.txt  Pasted--GitHub-gitignore--1759678936813_1759678936814.txt  Pasted--workspace-poetry-run-mypy-apps-users-managers-py-13-error-Signature-of-create-user-incompa-1759712416716_1759712416717.txt  Pasted--workspace-poetry-run-mypy-apps-users-managers-py-13-error-Signature-of-create-user-incompa-1759712467301_1759712467302.txt  Pasted-Found-4-test-s-System-check-identified-no-issues-0-silenced-EEEE--1759709382885_1759709382885.txt  Pasted-apps-mailings-apps-py-84-120-E501-Line-too-long-165-119-82-83-84-indicators-1759710761061_1759710761061.txt  requirements_1759585873045.txt  Глобальный контекст_1759593477325.py  Задание_1759586120868.txt  Контекст выполнения_1759593477326.py  Правильный координатор_1759593477327.py  Структура_1759591716053.txt  Требования к проекту и архитектуре_1759593477328.txt  Требования_1759593477329.txt
FromProject04/Project04-feature-project04_prepare_017/config/: settings.py  settings_test.py  urls.py
FromProject04/Project04-feature-project04_prepare_017/scripts/: lint.py
FromProject04/Project04-feature-project04_prepare_017/static/css/: custom.css
FromProject04/Project04-feature-project04_prepare_017/templates/: base.html  home.html
FromProject04/Project04-feature-project04_prepare_017/templates/emails/: verify_email.html
FromProject04/Project04-feature-project04_prepare_017/templates/includes/: messages.html  navbar.html  pagination.html
FromProject04/Project04-feature-project04_prepare_017/templates/mailings/: attempt_list.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  mailing_reports.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html
FromProject04/Project04-feature-project04_prepare_017/templates/users/: email_verification_pending.html  login.html  profile.html  profile_edit.html  register.html  user_management_list.html
FromProject04/Project04-feature-project04_prepare_017/tests/: conftest.py
FromProject04/Project04-feature-project04_prepare_017/tests/core/: apps.py  conftest.py  models.py  test_mixins.py  test_models.py  test_permissions.py  test_services.py
FromProject04/Project04-feature-project04_prepare_017/tests/mailings/: test_cache.py  test_forms.py  test_management_commands.py  test_models.py  test_scheduler.py  test_services.py  test_views.py
FromProject04/Project04-feature-project04_prepare_017/tests/users/: test_email_verification.py  test_forms.py  test_management_commands.py  test_models.py  test_views.py
attached_assets/: Pasted--Django-settings-for-config-project-Generated-by-django-admin-startproject-using-Django-5-2-6-1758025934213_1758025934214.txt  Pasted--Git-GitHub-pull-request-develop--1760108148292_1760108148293.txt  Pasted--workspace-pytest-cov-cov-report-term-missing--1758026531501_1758026531502.txt  Pasted--workspace-pytest-cov-src-cov-report-term-missing--1758025998095_1758025998096.txt  Pasted-ERROR-tests-test-config-urls-py-ConfigUrlsTestCase-test-admin-url-resolves-django-core-exception-1758025281189_1758025281190.txt
blog/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
blog_/: admin.py
catalog/: urls.py
config/: csrf_middleware.py  settings.py  urls.py
courses/: tests.py  urls.py  views.py
docs/: DEVELOPMENT.md  tasks.md
marketplace/: .env  admin.py  apps.py  categories_and_products_fixture.json  categories_fixture.json  forms.py  models.py  products_fixture.json  signals.py  urls.py  views.py
marketplace_/: admin.py  urls.py
students/: models.py  tests.py  urls.py  views.py
tests/: test_config_urls.py  test_templates.py
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+124 files in other folders)
