[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_base"
version = "0.1.0"
description = "6. Основы Django"
authors = ["Ri Ga <riga1897@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
poetry-core = "^2.2.0"
django = "^5.2.6"
coverage = "^7.10.6"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.0"
pytest-cov = "^7.0.0"
autopep8 = "^2.3.2"
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pydocstyle = "^6.3.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.2.5"
mypy = "^1.18.1"

[tool.black]
line-length = 119
exclude = '''
(
    /(
        \.eggs.py
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    )/
    | foo.py
)
'''

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = [
  ".venv", ".idea"
]

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
