[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_base"
version = "0.1.0"
description = "6. Основы Django"
authors = ["Ri Ga <riga1897@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
poetry-core = ">=2.2.1"
psycopg2-binary = "^2.9.10"
django = "^5.2.6"
python-dotenv = "^1.1.1"
pillow = "==11.3.0"
ipython = "==9.6.0"
asttokens = "==3.0.0"
decorator = "==5.2.1"
executing = "==2.2.1"
ipython-pygments-lexers = "==1.1.1"
jedi = "==0.19.2"
matplotlib-inline = "==0.1.7"
parso = "==0.8.5"
prompt-toolkit = "==3.0.52"
pure-eval = "==0.2.3"
stack-data = "==0.6.3"
traitlets = "==5.14.3"
wcwidth = "==0.2.14"
django-stubs = "^5.2.5"
dj-database-url = "^3.0.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.13.1"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.0"
pytest-cov = "^7.0.0"
autopep8 = "^2.3.2"
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pydocstyle = "^6.3.0"

[tool.black]
line-length = 119
exclude = '''
(
    /(
        \.eggs.py
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    )/
    | foo.py
)
'''

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = [
  ".venv", ".idea"
]

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.ruff]
line-length = 119
preview = true

# Linter-specific settings are now grouped here
[tool.ruff.lint]
select = ["B", "E", "F", "I", "C90", "UP", "SIM"] # Warning resolved

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
